--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import Layout from '../layouts/Layout.astro';
         </div>
 
         <div class="fade-in-up delay-3">
-            <img id="dashboard" src="Imagenes/Dashboard/Dashboard.svg" loading="lazy">
+            <img id="dashboard" src="Imagenes/Dashboard/Dashboard.png" loading="lazy">
         </div>
 
         <!--
@@ -300,7 +300,7 @@ import Layout from '../layouts/Layout.astro';
                     <p class="subtexto" id="subtexto-grupos">Charla sobre startups prometedoras e<br> interactúa con otros usuarios</p>
 
                     <section class="contenedor" id="contenedor-grupos">
-                        <img src="Imagenes/Bento Inversores 2/Grupos.svg">
+                        <img class="foto-grupos" src="Imagenes/Bento Inversores 2/Grupos.png">
                     </section>
                 </section>
 
@@ -452,6 +452,7 @@ import Layout from '../layouts/Layout.astro';
 
 img#fondo{
     z-index: -1;
+    height: 5500px;
 }
 
 h1{
@@ -551,9 +552,14 @@ button#registrate::before {
 
 
 img#dashboard{
-    margin-top: -20px;
+    position: relative;
+    top: 70px;
     display: block;
     margin: auto;
+    width: 1115.08px;
+    height: 603.662px;
+    object-fit: cover;
+    border-radius: 10px;
 }
 
 p{
@@ -1499,6 +1505,16 @@ section#contenedor-grupos{
     bottom: 0;
     position: absolute;
     background-color: #10101A;
+    overflow: hidden;
+}
+
+.foto-grupos{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: left;
+    transform: scale(1.1);
+    transform-origin: top left;
 }
 
 img#modo-arriba-derecha-inversores{
@@ -1768,16 +1784,27 @@ p#eventos-subtexto{
   }
   
 footer{
-    margin-top: 424px;
+    position: relative;
+    width: 100%;
     color: #e9e9e9;
     padding: 50px 0;
     z-index: 999;
-    width: 100%;
     border: 1px solid #222034;
     background-color: #0E101D;
-  }
-  
-  .footer-container {
+    margin-top: 400px;
+}
+
+body {
+    min-height: 100vh;
+    display: flex;
+    flex-direction: column;
+}
+
+#cuerpo {
+    flex: 1;
+}
+
+.footer-container {
     display: flex;
     justify-content: space-between;
     align-items: flex-start;
@@ -1785,79 +1812,85 @@ footer{
     width: 100%;
     padding: 0 20px;
     margin-left: 50px;
-  }
+    max-width: 100%;
+}
 
-  .footer-links {
+.footer-links {
     position: relative;
     flex: 4;
     display: flex;
-  }
-  
-  .footer-column {
-    margin-right: 380px;
-  }
+    width: 100%;
+}
 
-  div#columna-medio{
+.footer-column {
+    margin-right: 380px;
+    width: auto;
+}
+
+div#columna-medio{
     margin-right: 120px;
-  }
-  
-  .footer-column ul {
+}
+
+.footer-column ul {
     list-style: none;
     padding: 0;
-  }
-  
-  .footer-column li {
+    margin: 0;
+}
+
+.footer-column li {
     margin-bottom: 10px;
-  }
-  
-  .footer-column a {
+}
+
+.footer-column a {
     color: #b7b7d8;
     text-decoration: none;
     font-size: 15px;
-  }
-  
-  .footer-column a:hover {
+}
+
+.footer-column a:hover {
     color: #e9e9e9;
-  }
-  
-  .footer-social {
+}
+
+.footer-social {
     padding-right: 25px;
     bottom: -21px;
     position: relative;
-  }
+}
 
-  .footer-social a{
+.footer-social a{
     margin-right: 20px;
     margin-top: 45px;
-  }
+}
 
-  .footer-column-social{
+.footer-column-social{
     position: absolute;
-    bottom: -35px
-  }
-  
-  .footer-contact {
+    bottom: -35px;
+    display: flex;
+    justify-content: center;
+}
+
+.footer-contact {
     margin-right: 50px;
     margin-left: auto;
     position: relative;
     padding: 20px;
     margin-top: -212px;
     max-width: 25%;
-  }
-  
-  .footer-contact h4 {
+}
+
+.footer-contact h4 {
     margin: 0 0 14px 0;
     font-size: 16px;
     font-weight: 600;
-  }
+}
 
-  .footer-contact form {
+.footer-contact form {
     display: flex;
     flex-direction: column;
-  }
-  
-  .footer-contact input,
-  .footer-contact textarea {
+}
+
+.footer-contact input,
+.footer-contact textarea {
     font-family: "Inter";
     font-size: 12px;
     padding: 10px;
@@ -1868,33 +1901,34 @@ footer{
     color: #e9e9e9;
     min-width: 100%;
     max-width: 100%;
-  }
+}
 
-  .footer-contact input,
-  .footer-contact textarea:focus{
+.footer-contact input,
+.footer-contact textarea:focus{
     outline: none;
-  }
+}
 
-  .footer-contact textarea{
+.footer-contact textarea{
     max-height: 100px;
     min-height: 100px;
-  }
-  
-  .footer-contact button {
+}
+
+.footer-contact button {
     padding: 10px;
     border: none;
     border-radius: 5px;
-    background-color: #806FE8;
+    background-color: #594DA8;
     color: #fff;
     cursor: pointer;
     min-width: 105%;
     max-width: 105%;
-  }
-  
-  .footer-contact button:hover {
-    background-color: #5a73b5;
-  }
-  
+    transition: background-color 0.3s;
+}
+
+.footer-contact button:hover {
+    background-color: #6b5fba;
+}
+
 
 section#inversores-1-arriba-izquierda {
     width: 288px;
@@ -2316,6 +2350,12 @@ div#footer{
     margin: 0 auto;
     height: 14px;
     width: 14px;
+}
+
+.foto-grupos{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
 .valoracion{
